--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,11 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-anyhow = "1.0.100"
-clap = {version = "4.5.41", features = ["derive"]}
-dirs = "6.0.0"
-reqwest = {version = "0.12.24", features = ["blocking", "json"]}
+axum = "0.6"
+tokio = { version = "1.37", features = ["full"] }
+tokio-util = "0.7"
+anyhow = "1.0"
+clap = { version = "4.4", features = ["derive"] }
+reqwest = { version = "0.12", features = ["blocking"] }
+dirs = "5.0"
+
